--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "ts-node index.ts",
-    "lint": "eslint frontend/**/*.vue frontend/**/*.ts backend/**/*.ts",
+    "lint": "eslint **/*.ts",
     "test": "npm run lint && npm run test:unit && npm run test:docker",
     "test:unit": "vitest --run",
     "test:watch": "vitest",
@@ -25,6 +25,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.7",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/parser": "^6.5.0",
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
     "prettier-eslint": "^15.0.1",
@@ -34,6 +35,7 @@
     "vitest": "^0.34.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "useful-typescript-functions": "^2.8.0"
   }
 }
