--- a/package.json
+++ b/package.json
@@ -23,10 +23,16 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/mustache": "^4.2.3",
     "@types/node": "^20.5.7",
+    "@types/nodemailer": "^6.4.11",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.5.0",
+    "@vitest/coverage-v8": "^0.34.6",
     "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.0.3",
     "prettier-eslint": "^15.0.1",
     "supertest": "^6.3.3",
@@ -36,6 +42,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "mustache": "^4.2.0",
+    "nodemailer": "^6.9.6",
     "useful-typescript-functions": "^2.8.0"
   }
 }
