fix: Group supertest with its types

--- a/renovate.json
+++ b/renovate.json
@@ -31,6 +31,13 @@
         "vite",
         "^@vitejs/"
       ]
+    },
+    {
+      "groupName": "supertest",
+      "matchPackagePrefixes": [
+        "supertest",
+        "@types/supertest"
+      ]
     }
   ]
 }
