--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/mustache": "^4.2.5",
     "@types/node": "^20.10.5",
     "@types/nodemailer": "^6.4.14",
-    "@types/supertest": "^6.0.0",
+    "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "@vitest/coverage-v8": "^1.1.0",
