fix: adaptions to utf 3

--- a/config.template.yaml
+++ b/config.template.yaml
@@ -11,26 +11,30 @@ backend:
 
   subscriptionConfig:
     test_environment:
+      title: Test list
       from: Test mailer<mailer@example.com>
       recipient: Test admin<admin@example.com>
-      subject: "[List name] Registration"
-      optIn: |
-        <p>Dear {{name}},</p>
+      optIn:
+        subject: "[List name] Registration"
+        html: |
+          <p>Dear {{name}},</p>
 
-        <p>
-          Thank you for your interest in {{title}}!
-          To confirm your email address, click this link:
-        </p>
-        
-        <p>{{link}}</p>
+          <p>
+            Thank you for your interest in {{title}}!
+            To confirm your email address, click this link:
+          </p>
+          
+          <p>{{link}}</p>
 
-        <p>
-          If you didn't register for {{title}}, you're safe to just ignore and delete this e-mail.
-          We don't store any data about you.
-        </p>
-      confirmed: |
-        <p>Dear Administrator,</p>
-        
-        <p>
-          {{name}} &lt;{{email}}&gt; likes to get news for "Test".
-        </p
+          <p>
+            If you didn't register for {{title}}, you're safe to just ignore and delete this e-mail.
+            We don't store any data about you.
+          </p>
+      confirmed:
+        subject: "[List name] Registration"
+        html: |
+          <p>Dear Administrator,</p>
+          
+          <p>
+            {{name}} &lt;{{email}}&gt; likes to get news for "Test".
+          </p
