fix: prevent upgrade of eslint due to https://github.com/typescript-eslint/typescript-eslint/issues/8211

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,19 @@
   "cSpell.words": [
     "esistzulaut"
   ],
-  "cSpell.language": "en, de"
+  "cSpell.language": "en, de",
+  "json.schemas": [
+    {
+      "fileMatch": [
+        ".ncurc",
+        ".ncurc.json",
+      ],
+      "url": "https://raw.githubusercontent.com/raineorshine/npm-check-updates/main/src/types/RunOptions.json"
+    }
+  ],
+  "yaml.schemas": {
+    "https://raw.githubusercontent.com/raineorshine/npm-check-updates/main/src/types/RunOptions.json": [
+        ".ncurc.yml",
+    ]
+  },
 }
