--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:docker": "docker build -t joschi64/func:latest .",
     "docker:push": "docker push joschi64/func:latest",
     "publish": "npm run build:docker && npm run docker:push",
-    "update": "npx -y npm-check-updates -d -u -e 2",
+    "update": "npx -y npm-check-updates -du",
     "start": "node dist/index.js"
   },
   "keywords": [],
