--- a/.github/workflows/update-dependencies.yaml
+++ b/.github/workflows/update-dependencies.yaml
@@ -14,7 +14,8 @@ jobs:
       - name: Setup nodejs version
         uses: actions/setup-node@v4
         with:
-          node-version: "18"
+          node-version: "lts/*"
+          check-latest: true
 
       - name: Install dependencies
         run: npm ci
