--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,110 +1,81 @@
-name: CICD
-
+name: CI/CD
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
-
+    branches:
+      - main
 jobs:
   setup:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v4
       - name: Setup nodejs version
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version-file: ".node-version"
-
+          node-version: lts/*
+          check-latest: true
       - name: Install dependencies
         run: npm ci
-
       - name: Cache node modules
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         env:
           cache-name: cache-node-modules
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
+          key: >-
+            ${{ runner.os }}-build-${{ env.cache-name }}-${{
+            hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.os }}-build-${{ env.cache-name }}-
   unit-tests:
     runs-on: ubuntu-latest
     needs: setup
-
     permissions:
-      # Required to checkout the code
       contents: read
-      # Required by coverage generator to put a comment into the pull-request
       pull-requests: write
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup node version
-        uses: actions/setup-node@v3
+        uses: actions/checkout@v4
+      - name: Setup nodejs version
+        uses: actions/setup-node@v4
         with:
-          node-version-file: ".node-version"
-
+          node-version: lts/*
+          check-latest: true
       - name: Install dependencies
         run: npm ci
-
       - name: Run unit tests
         run: npm run test:coverage
-
-      - name: "Report Coverage"
-        if: always() # Also generate the report if tests are failing
-        uses: davelosert/vitest-coverage-report-action@v1
-
-  # cypress-run:
-  #   runs-on: ubuntu-latest
-  #   needs: setup
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-
-  #     - name: Cypress run
-  #       uses: cypress-io/github-action@v2
-  #       env:
-  #         PORT: 3000
-  #       with:
-  #         build: npm run build
-  #         start: npm start
-
+      - name: Report Coverage
+        if: always()
+        uses: davelosert/vitest-coverage-report-action@v2
+        with:
+          file-coverage-mode: all
   deploy-to-docker:
     runs-on: ubuntu-latest
     needs:
       - setup
       - unit-tests
-      # - cypress-run
     steps:
       - name: Install curl
         run: sudo apt-get install -y curl openssl
-
       - name: Checkout code
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v4
       - name: Docker meta
         id: docker_meta
         uses: crazy-max/ghaction-docker-meta@v4
         with:
           images: joschi64/func
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
       - name: Login to DockerHub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push
+      - name: Build and push image
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -112,11 +83,10 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
-
       - name: Call deployment webhook if it exists
         env:
           url: ${{ secrets.DEPLOYMENT_WEBHOOK }}
         if: ${{ env.url != '' }}
-        run: |
+        run: |-
           sed s/https/http/ <<< $url
           curl -X POST $url
