--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@types/supertest": "6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
-    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/coverage-v8": "3.1.4",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
@@ -39,7 +39,7 @@
     "ts-node": "^10.9.2",
     "tsx": "4.19.3",
     "typescript": "^5.8.2",
-    "vitest": "^2.1.8"
+    "vitest": "3.1.4"
   },
   "dependencies": {
     "express": "^4.21.2",
